syntax/tests/parsing/errors/expressions/record.js
let newWrapper = {
  updateF
  value: f(xWrapper.currentValue),
}


let newWrapper = {
  updateF updateF2
  value: f(xWrapper.currentValue),
}

let record = {
  field:
}


